--- a/src/chains.ipynb
+++ b/src/chains.ipynb
@@ -35,15 +35,16 @@
     "#| export\n",
     "\n",
     "import asyncio, web3, os\n",
+    "from dataclasses import dataclass\n",
     "from functools import wraps, reduce\n",
-    "from typing import List, TypeVar, Callable, Optional, Tuple, Dict\n",
+    "from typing import List, TypeVar, Callable, Optional, Tuple, Dict, Union\n",
     "from fastcore.utils import patch\n",
     "from web3 import Web3, HTTPProvider, AsyncWeb3, AsyncHTTPProvider, Account\n",
     "from web3.eth.async_eth import AsyncContract\n",
     "from web3.eth import Contract\n",
     "from sugar.config import ChainSettings, make_op_chain_settings, make_base_chain_settings\n",
     "from sugar.helpers import normalize_address, MAX_UINT256, float_to_uint256, apply_slippage, get_future_timestamp\n",
-    "from sugar.abi import sugar, slipstream, price_oracle, router\n",
+    "from sugar.abi import sugar, slipstream, price_oracle, router, quoter\n",
     "from sugar.token import Token\n",
     "from sugar.pool import LiquidityPool\n",
     "from sugar.price import Price\n",
@@ -142,7 +143,11 @@
     "class AsyncChain(CommonChain):\n",
     "    web3: AsyncWeb3\n",
     "    sugar: AsyncContract\n",
+    "    slipstream: AsyncContract\n",
     "    router: AsyncContract\n",
+    "    prices: AsyncContract\n",
+    "    quoter: AsyncContract\n",
+    "\n",
     "\n",
     "    async def __aenter__(self):\n",
     "        \"\"\"Async context manager entry\"\"\"\n",
@@ -152,6 +157,7 @@
     "        self.slipstream = self.web3.eth.contract(address=self.settings.slipstream_contract_addr, abi=slipstream)\n",
     "        self.prices = self.web3.eth.contract(address=self.settings.price_oracle_contract_addr, abi=price_oracle)\n",
     "        self.router = self.web3.eth.contract(address=self.settings.router_contract_addr, abi=router)\n",
+    "        self.quoter = self.web3.eth.contract(address=self.settings.quoter_contract_addr, abi=quoter)\n",
     "        return self\n",
     "\n",
     "    async def __aexit__(self, exc_type, exc_val, exc_tb):\n",
@@ -329,6 +335,9 @@
     "    web3: Web3\n",
     "    sugar: Contract\n",
     "    router: Contract\n",
+    "    slipstream: Contract\n",
+    "    prices: Contract\n",
+    "    quoter: Contract\n",
     "\n",
     "    def __enter__(self):\n",
     "        \"\"\"Sync context manager entry\"\"\"\n",
@@ -338,6 +347,7 @@
     "        self.slipstream = self.web3.eth.contract(address=self.settings.slipstream_contract_addr, abi=slipstream)\n",
     "        self.prices = self.web3.eth.contract(address=self.settings.price_oracle_contract_addr, abi=price_oracle)\n",
     "        self.router = self.web3.eth.contract(address=self.settings.router_contract_addr, abi=router)\n",
+    "        self.quoter = self.web3.eth.contract(address=self.settings.quoter_contract_addr, abi=quoter)\n",
     "        return self\n",
     "\n",
     "    def __exit__(self, exc_type, exc_val, exc_tb):\n",
@@ -484,7 +494,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "==:\n61\n0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m     sock\u001b[38;5;241m.\u001b[39msettimeout(\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m      8\u001b[0m     result \u001b[38;5;241m=\u001b[39m sock\u001b[38;5;241m.\u001b[39mconnect_ex((host, port))\n\u001b[0;32m----> 9\u001b[0m     \u001b[43mtest_eq\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m socket\u001b[38;5;241m.\u001b[39merror \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m     11\u001b[0m     test_eq(err, \u001b[38;5;28;01mNone\u001b[39;00m)\n",
+      "File \u001b[0;32m~/projects/sugar-sdk/env/lib/python3.10/site-packages/fastcore/test.py:39\u001b[0m, in \u001b[0;36mtest_eq\u001b[0;34m(a, b)\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mtest_eq\u001b[39m(a,b):\n\u001b[1;32m     38\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`test` that `a==b`\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 39\u001b[0m     \u001b[43mtest\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43mequals\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m==\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/projects/sugar-sdk/env/lib/python3.10/site-packages/fastcore/test.py:29\u001b[0m, in \u001b[0;36mtest\u001b[0;34m(a, b, cmp, cname)\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`assert` that `cmp(a,b)`; display inputs and `cname or cmp.__name__` if it fails\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m cname \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m: cname\u001b[38;5;241m=\u001b[39mcmp\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\n\u001b[0;32m---> 29\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m cmp(a,b),\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00ma\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mb\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: ==:\n61\n0"
+     ]
+    }
+   ],
    "source": [
     "from fastcore.test import test_eq\n",
     "import socket\n",
@@ -594,6 +618,96 @@
     "\n",
     "    for p in prices[:5]: print(f\"{p.token.symbol} price: ${p.price}\")\n",
     "    for p in pools[:5]: print(f\"{p.symbol} pool: ${p.tvl}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quotes and swaps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with OPChain() as op:\n",
+    "    tokens = op.get_all_tokens()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vAMM-RED/VELO pool: $157071.57740780286\n",
+      "vAMM-USDC/VELO pool: $346677.13507041824\n",
+      "vAMM-WETH/VELO pool: $331878.4896716826\n",
+      "sAMM-alETH/frxETH pool: $579015.5446461209\n",
+      "vAMM-wstETH/LDO pool: $96571.3795393492\n"
+     ]
+    }
+   ],
+   "source": [
+    "with OPChain() as op:\n",
+    "    pools = op.get_pools()\n",
+    "    for p in pools[:5]: print(f\"{p.symbol} pool: ${p.tvl}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PreparedRoute(types=['address', 'int24', 'address', 'int24', 'address'], values=['0x3417E54A51924C225330f8770514aD5560B9098D', 2097152, '0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db', 2097152, '0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db'])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sugar.helpers import Pair, find_all_paths\n",
+    "\n",
+    "# def get_token_by_addres(addr): return next(filter(lambda t: t.token_address == addr, tokens), None)\n",
+    "\n",
+    "# pairs = [Pair(p.token0.token_address, p.token1.token_address) for p in pools]\n",
+    "# paths = find_all_paths(pairs, \"0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db\", \"0x4200000000000000000000000000000000000006\", 4)\n",
+    "# for path in paths: print(\" -> \".join([get_token_by_addres(p).symbol for p in path]))\n",
+    "\n",
+    "# @dataclass\n",
+    "#class QuoteRouteElement: from_token: Token; to_token: Token; pool: LiquidityPool\n",
+    "\n",
+    "QUOTER_STABLE_POOL_FILLER = 2097152\n",
+    "QUOTER_VOLATILE_POOL_FILLER = 4194304\n",
+    "\n",
+    "@dataclass\n",
+    "class PreparedRoute: types: List[str]; values: List[Union[str, int]]\n",
+    "\n",
+    "def prepare_route(nodes: List[LiquidityPool]) -> PreparedRoute:\n",
+    "    types = reduce(lambda s, pool: s + pool, [[\"address\", \"int24\"] for i in range(len(nodes))], []) + [\"address\"]\n",
+    "    values = []\n",
+    "\n",
+    "    for pool in nodes:\n",
+    "        if pool.type > 0:filler = pool.type\n",
+    "        else: filler =  QUOTER_STABLE_POOL_FILLER if pool.is_stable == 0 else QUOTER_VOLATILE_POOL_FILLER\n",
+    "\n",
+    "        if len(values) == 0: values = [pool.token0.token_address, filler, pool.token1.token_address]\n",
+    "        else: values += [filler, pool.token1.token_address]\n",
+    "\n",
+    "    return PreparedRoute(types=types, values=values)\n",
+    "\n",
+    "prepare_route([pools[0], pools[1]])"
    ]
   },
   {
