--- a/src/pool.ipynb
+++ b/src/pool.ipynb
@@ -107,6 +107,7 @@
     "    lp: str\n",
     "    factory: str\n",
     "    symbol: str\n",
+    "    type: int\n",
     "    is_stable: bool\n",
     "    # concentrated liquidity pools\n",
     "    is_cl: bool\n",
@@ -215,6 +216,7 @@
     "            lp=normalize_address(t[0]),\n",
     "            factory=normalize_address(t[18]),\n",
     "            symbol=symbol,\n",
+    "            type=pool_type,\n",
     "            # stable pools have type set to 0\n",
     "            is_stable=pool_type == 0,\n",
     "            is_cl=pool_type > 0,\n",
