--- a/src/helpers.ipynb
+++ b/src/helpers.ipynb
@@ -135,7 +135,7 @@
     {
      "data": {
       "text/plain": [
-       "1741886626"
+       "1742218407"
       ]
      },
      "execution_count": null,
@@ -178,72 +178,21 @@
     "#| export\n",
     "# Claude 3.7 sonnet made this\n",
     "\n",
-    "@dataclass\n",
-    "class Pair: token0: str; token1: str\n",
+    "from dataclasses import dataclass\n",
+    "import networkx as nx\n",
     "\n",
-    "def find_all_paths(pairs, a, b, max_depth=3):\n",
-    "    \"\"\"\n",
-    "    Find paths from token 'a' to token 'b' in a graph defined by pairs, with limits to prevent \n",
-    "    excessive computation in dense, cyclical graphs.\n",
+    "@dataclass\n",
+    "class Pair:\n",
+    "    token0: str\n",
+    "    token1: str\n",
+    "\n",
+    "def find_all_paths(pairs: List[Pair], start_token, end_token, cutoff=3):\n",
+    "    # Create graph\n",
+    "    G = nx.Graph()\n",
+    "    for pair in pairs: G.add_edge(pair.token0, pair.token1)\n",
     "    \n",
-    "    Parameters:\n",
-    "    pairs (list): A list of dictionaries with 'token0' and 'token1' keys\n",
-    "    a (str): Starting token\n",
-    "    b (str): Destination token\n",
-    "    max_depth (int): Maximum path length to explore\n",
-    "    \n",
-    "    Returns:\n",
-    "    list: A list of paths, where each path is a list of tokens\n",
-    "    \"\"\"\n",
-    "    # Build adjacency list representation of the graph\n",
-    "    graph = {}\n",
-    "    for pair in pairs:\n",
-    "        token0, token1 = pair.token0, pair.token1\n",
-    "        \n",
-    "        # Add connections in both directions for an undirected graph\n",
-    "        if token0 not in graph:\n",
-    "            graph[token0] = []\n",
-    "        if token1 not in graph:\n",
-    "            graph[token1] = []\n",
-    "            \n",
-    "        graph[token0].append(token1)\n",
-    "        graph[token1].append(token0)\n",
-    "    \n",
-    "    # Check if start or end nodes exist in the graph\n",
-    "    if a not in graph or b not in graph:\n",
-    "        return []\n",
-    "    \n",
-    "    # List to store all found paths\n",
-    "    all_paths = []\n",
-    "    \n",
-    "    # Helper function for DFS traversal with depth limit\n",
-    "    def dfs(current, destination, visited, path, depth=0):    \n",
-    "        # If we've exceeded our maximum depth, stop this branch\n",
-    "        if depth >= max_depth:\n",
-    "            return\n",
-    "            \n",
-    "        # Add current node to path\n",
-    "        path.append(current)\n",
-    "        \n",
-    "        # If we've reached the destination, add the path to our results\n",
-    "        if current == destination:\n",
-    "            all_paths.append(path.copy())\n",
-    "        else:\n",
-    "            # Mark current node as visited to avoid cycles\n",
-    "            visited.add(current)\n",
-    "            \n",
-    "            # Explore neighbors\n",
-    "            for neighbor in graph[current]:\n",
-    "                if neighbor not in visited:\n",
-    "                    # Create copies of visited and path for this branch of exploration\n",
-    "                    dfs(neighbor, destination, visited.copy(), path.copy(), depth + 1)\n",
-    "    \n",
-    "    # Start DFS from the starting token\n",
-    "    dfs(a, b, set(), [])\n",
-    "    \n",
-    "    # clear duplicates (merge paths using \"-\", run this through a set, then split by \"-\")\n",
-    "    return [p.split(\"-\") for p in set([\"-\".join(p) for p in all_paths])]\n",
-    "    "
+    "    # Find all simple paths\n",
+    "    return [p for p in nx.all_simple_paths(G, source=start_token, target=end_token, cutoff=cutoff)]\n"
    ]
   },
   {
@@ -257,12 +206,14 @@
      "text": [
       "All paths from A to C:\n",
       "Path 1: A -> B -> C\n",
-      "Path 2: A -> E -> C\n",
+      "Path 2: A -> B -> D -> C\n",
       "Path 3: A -> D -> C\n",
+      "Path 4: A -> D -> B -> C\n",
+      "Path 5: A -> E -> C\n",
       "\n",
       "All paths from X to Z in a cyclical graph:\n",
-      "Path 1: X -> Z\n",
-      "Path 2: X -> Y -> Z\n"
+      "Path 1: X -> Y -> Z\n",
+      "Path 2: X -> Z\n"
      ]
     }
    ],
@@ -275,7 +226,7 @@
     "    Pair(\"D\", \"C\"),\n",
     "    Pair(\"B\", \"D\"),\n",
     "    Pair(\"C\", \"E\"),\n",
-    "    Pair(\"E\", \"A\")  # This creates a cycle A -> E -> C -> B -> A\n",
+    "    Pair(\"E\", \"A\")\n",
     "]\n",
     "\n",
     "# Find paths from A to C\n",
