--- a/src/pool.ipynb
+++ b/src/pool.ipynb
@@ -96,6 +96,42 @@
    "source": [
     "#| export\n",
     "\n",
+    "def symbol(token0: Token, token1: Token, pool_type: int) -> str:\n",
+    "    return f\"CL{pool_type}-{token0.symbol}/{token1.symbol}\" if pool_type > 0  else f\"{'s' if pool_type == 0 else 'v'}AMM-{token0.symbol}/{token1.symbol}\"\n",
+    "\n",
+    "@dataclass(frozen=True)\n",
+    "class LiquidityPoolForSwap:\n",
+    "    \"\"\"A more compact pool representation used for swaps\"\"\"\n",
+    "\n",
+    "    lp: str\n",
+    "    type: int\n",
+    "    token0: Token\n",
+    "    token1: Token\n",
+    "    is_stable: bool\n",
+    "    # concentrated liquidity pools\n",
+    "    is_cl: bool\n",
+    "    symbol: str\n",
+    "\n",
+    "    @classmethod\n",
+    "    def from_tuple(cls, t: Tuple, tokens: Dict[str, Token]) -> Optional[\"LiquidityPoolForSwap\"]:\n",
+    "        token0, token1, pool_type = normalize_address(t[2]), normalize_address(t[3]), t[1]\n",
+    "        token0, token1 = tokens.get(token0), tokens.get(token1)\n",
+    "        if not token0 or not token1: \n",
+    "            print(f\">>>>>>>>>>. missing toekens {token0} {token1}\")\n",
+    "            return None\n",
+    "        return LiquidityPoolForSwap(\n",
+    "            lp=normalize_address(t[0]),\n",
+    "            type=pool_type,\n",
+    "            token0=token0,\n",
+    "            token1=token1,\n",
+    "            is_stable=pool_type == 0,\n",
+    "            is_cl=pool_type > 0,\n",
+    "            symbol=symbol(token0, token1, pool_type)\n",
+    "        )\n",
+    "\n",
+    "        \n",
+    "\n",
+    "\n",
     "@dataclass(frozen=True)\n",
     "class LiquidityPool:\n",
     "    \"\"\"Data class for Liquidity Pool\n",
@@ -210,12 +246,11 @@
     "\n",
     "        token0, token1 = tokens.get(token0), tokens.get(token1)\n",
     "        if not token0 or not token1: return None\n",
-    "        symbol = f\"CL{pool_type}-{token0.symbol}/{token1.symbol}\" if pool_type > 0  else f\"{'s' if pool_type == 0 else 'v'}AMM-{token0.symbol}/{token1.symbol}\"\n",
-    "    \n",
+    "\n",
     "        return LiquidityPool(\n",
     "            lp=normalize_address(t[0]),\n",
     "            factory=normalize_address(t[18]),\n",
-    "            symbol=symbol,\n",
+    "            symbol=symbol(token0, token1, pool_type),\n",
     "            type=pool_type,\n",
     "            # stable pools have type set to 0\n",
     "            is_stable=pool_type == 0,\n",
