--- a/src/helpers.ipynb
+++ b/src/helpers.ipynb
@@ -25,7 +25,7 @@
     "#| export\n",
     "\n",
     "from web3 import Web3, constants\n",
-    "from typing import List\n",
+    "from typing import List, Tuple\n",
     "from decimal import Decimal\n",
     "from datetime import datetime, timedelta\n",
     "from dataclasses import dataclass"
@@ -135,7 +135,7 @@
     {
      "data": {
       "text/plain": [
-       "1742218407"
+       "1743416583"
       ]
      },
      "execution_count": null,
@@ -182,17 +182,58 @@
     "import networkx as nx\n",
     "\n",
     "@dataclass\n",
-    "class Pair:\n",
-    "    token0: str\n",
-    "    token1: str\n",
+    "class Pair: token0: str; token1: str; pool: str\n",
     "\n",
-    "def find_all_paths(pairs: List[Pair], start_token, end_token, cutoff=3):\n",
-    "    # Create graph\n",
-    "    G = nx.Graph()\n",
-    "    for pair in pairs: G.add_edge(pair.token0, pair.token1)\n",
+    "def find_all_paths(pairs: List[Pair], start_token: str, end_token: str, cutoff=3) -> List[List[Tuple]]:\n",
+    "    # MultiGraph required to support parallel edges\n",
+    "    # same tokens can be present in different pools, hence parallel edges\n",
+    "    # specific pool identifier is stored inside edge attribute\n",
+    "    G, complete_paths = nx.MultiGraph(), []\n",
+    "    for pair in pairs: G.add_edge(pair.token0, pair.token1, pool=pair.pool)\n",
+    "    node_paths =  [p for p in nx.all_simple_paths(G, source=start_token, target=end_token, cutoff=cutoff)]\n",
+    "    for path in node_paths:\n",
+    "        edge_path = []\n",
+    "        # For each consecutive pair of nodes in the path\n",
+    "        for i in range(len(path) - 1):\n",
+    "            current = path[i]\n",
+    "            next_node = path[i + 1]\n",
+    "            \n",
+    "            # Get all edges between these nodes\n",
+    "            edges = G.get_edge_data(current, next_node)\n",
+    "            \n",
+    "            # There might be multiple edges (pools) between these nodes\n",
+    "            # Add all possible edges to create different complete paths\n",
+    "            current_paths = [] if not edge_path else edge_path.copy()\n",
+    "            new_edge_paths = []\n",
+    "            \n",
+    "            # If this is the first segment, initialize with empty path\n",
+    "            if not current_paths:\n",
+    "                current_paths = [[]]\n",
+    "                \n",
+    "            # For each possible edge between current and next_node\n",
+    "            for edge_key, edge_attrs in edges.items():\n",
+    "                pool = edge_attrs['pool']\n",
+    "                for current_path in current_paths:\n",
+    "                    # Create a new path that includes this edge\n",
+    "                    new_path = current_path + [(current, next_node, pool)]\n",
+    "                    new_edge_paths.append(new_path)\n",
+    "            \n",
+    "            edge_path = new_edge_paths\n",
+    "        \n",
+    "        # Add all possible edge paths to the complete paths\n",
+    "        complete_paths.extend(edge_path)\n",
     "    \n",
-    "    # Find all simple paths\n",
-    "    return [p for p in nx.all_simple_paths(G, source=start_token, target=end_token, cutoff=cutoff)]\n"
+    "    # seen is a list of strings that look like this [\"pool1-pool2-pool3\", ...]\n",
+    "    uniques, seen = [], []\n",
+    "\n",
+    "    for path in complete_paths:\n",
+    "        p = '-'.join(map(lambda x: x[2], path))\n",
+    "        if p not in seen:\n",
+    "            uniques.append(path)\n",
+    "            seen.append(p)\n",
+    "\n",
+    "    # remove duplicates\n",
+    "    return uniques\n"
    ]
   },
   {
@@ -205,28 +246,106 @@
      "output_type": "stream",
      "text": [
       "All paths from A to C:\n",
-      "Path 1: A -> B -> C\n",
-      "Path 2: A -> B -> D -> C\n",
-      "Path 3: A -> D -> C\n",
-      "Path 4: A -> D -> B -> C\n",
-      "Path 5: A -> E -> C\n",
+      "Path 1: pool1 -> pool2\n",
+      "Path 1: pool12 -> pool2\n",
+      "Path 1: pool13 -> pool2\n",
+      "Path 1: pool1 -> pool5 -> pool4\n",
+      "Path 1: pool12 -> pool5 -> pool4\n",
+      "Path 1: pool13 -> pool5 -> pool4\n",
+      "Path 1: pool3 -> pool4\n",
+      "Path 1: pool3 -> pool5 -> pool2\n",
+      "Path 1: pool7 -> pool6\n",
+      "Path 2: pool1 -> pool2\n",
+      "Path 2: pool12 -> pool2\n",
+      "Path 2: pool13 -> pool2\n",
+      "Path 2: pool1 -> pool5 -> pool4\n",
+      "Path 2: pool12 -> pool5 -> pool4\n",
+      "Path 2: pool13 -> pool5 -> pool4\n",
+      "Path 2: pool3 -> pool4\n",
+      "Path 2: pool3 -> pool5 -> pool2\n",
+      "Path 2: pool7 -> pool6\n",
+      "Path 3: pool1 -> pool2\n",
+      "Path 3: pool12 -> pool2\n",
+      "Path 3: pool13 -> pool2\n",
+      "Path 3: pool1 -> pool5 -> pool4\n",
+      "Path 3: pool12 -> pool5 -> pool4\n",
+      "Path 3: pool13 -> pool5 -> pool4\n",
+      "Path 3: pool3 -> pool4\n",
+      "Path 3: pool3 -> pool5 -> pool2\n",
+      "Path 3: pool7 -> pool6\n",
+      "Path 4: pool1 -> pool2\n",
+      "Path 4: pool12 -> pool2\n",
+      "Path 4: pool13 -> pool2\n",
+      "Path 4: pool1 -> pool5 -> pool4\n",
+      "Path 4: pool12 -> pool5 -> pool4\n",
+      "Path 4: pool13 -> pool5 -> pool4\n",
+      "Path 4: pool3 -> pool4\n",
+      "Path 4: pool3 -> pool5 -> pool2\n",
+      "Path 4: pool7 -> pool6\n",
+      "Path 5: pool1 -> pool2\n",
+      "Path 5: pool12 -> pool2\n",
+      "Path 5: pool13 -> pool2\n",
+      "Path 5: pool1 -> pool5 -> pool4\n",
+      "Path 5: pool12 -> pool5 -> pool4\n",
+      "Path 5: pool13 -> pool5 -> pool4\n",
+      "Path 5: pool3 -> pool4\n",
+      "Path 5: pool3 -> pool5 -> pool2\n",
+      "Path 5: pool7 -> pool6\n",
+      "Path 6: pool1 -> pool2\n",
+      "Path 6: pool12 -> pool2\n",
+      "Path 6: pool13 -> pool2\n",
+      "Path 6: pool1 -> pool5 -> pool4\n",
+      "Path 6: pool12 -> pool5 -> pool4\n",
+      "Path 6: pool13 -> pool5 -> pool4\n",
+      "Path 6: pool3 -> pool4\n",
+      "Path 6: pool3 -> pool5 -> pool2\n",
+      "Path 6: pool7 -> pool6\n",
+      "Path 7: pool1 -> pool2\n",
+      "Path 7: pool12 -> pool2\n",
+      "Path 7: pool13 -> pool2\n",
+      "Path 7: pool1 -> pool5 -> pool4\n",
+      "Path 7: pool12 -> pool5 -> pool4\n",
+      "Path 7: pool13 -> pool5 -> pool4\n",
+      "Path 7: pool3 -> pool4\n",
+      "Path 7: pool3 -> pool5 -> pool2\n",
+      "Path 7: pool7 -> pool6\n",
+      "Path 8: pool1 -> pool2\n",
+      "Path 8: pool12 -> pool2\n",
+      "Path 8: pool13 -> pool2\n",
+      "Path 8: pool1 -> pool5 -> pool4\n",
+      "Path 8: pool12 -> pool5 -> pool4\n",
+      "Path 8: pool13 -> pool5 -> pool4\n",
+      "Path 8: pool3 -> pool4\n",
+      "Path 8: pool3 -> pool5 -> pool2\n",
+      "Path 8: pool7 -> pool6\n",
+      "Path 9: pool1 -> pool2\n",
+      "Path 9: pool12 -> pool2\n",
+      "Path 9: pool13 -> pool2\n",
+      "Path 9: pool1 -> pool5 -> pool4\n",
+      "Path 9: pool12 -> pool5 -> pool4\n",
+      "Path 9: pool13 -> pool5 -> pool4\n",
+      "Path 9: pool3 -> pool4\n",
+      "Path 9: pool3 -> pool5 -> pool2\n",
+      "Path 9: pool7 -> pool6\n",
       "\n",
       "All paths from X to Z in a cyclical graph:\n",
-      "Path 1: X -> Y -> Z\n",
-      "Path 2: X -> Z\n"
+      "Path 1: pool8 -> pool9\n",
+      "Path 2: pool10\n"
      ]
     }
    ],
    "source": [
     " # Example pairs - including a cycle\n",
     "pairs = [\n",
-    "    Pair(\"A\", \"B\"),\n",
-    "    Pair(\"B\", \"C\"),\n",
-    "    Pair(\"A\", \"D\"),\n",
-    "    Pair(\"D\", \"C\"),\n",
-    "    Pair(\"B\", \"D\"),\n",
-    "    Pair(\"C\", \"E\"),\n",
-    "    Pair(\"E\", \"A\")\n",
+    "    Pair(\"A\", \"B\", \"pool1\"),\n",
+    "    Pair(\"A\", \"B\", \"pool12\"),\n",
+    "    Pair(\"A\", \"B\", \"pool13\"),\n",
+    "    Pair(\"B\", \"C\", \"pool2\"),\n",
+    "    Pair(\"A\", \"D\", \"pool3\"),\n",
+    "    Pair(\"D\", \"C\", \"pool4\"),\n",
+    "    Pair(\"B\", \"D\", \"pool5\"),\n",
+    "    Pair(\"C\", \"E\", \"pool6\"),\n",
+    "    Pair(\"E\", \"A\", \"pool7\"),\n",
     "]\n",
     "\n",
     "# Find paths from A to C\n",
@@ -234,13 +353,14 @@
     "\n",
     "print(f\"All paths from A to C:\")\n",
     "for i, path in enumerate(paths):\n",
-    "    print(f\"Path {i+1}: {' -> '.join(path)}\")\n",
+    "    for path in paths:\n",
+    "        print(f\"Path {i+1}: {' -> '.join(list(map(lambda x: x[2], path)))}\")\n",
     "    \n",
     "# Let's also test with a different example involving a cycle\n",
     "cycle_pairs = [\n",
-    "    Pair(\"X\", \"Y\"),\n",
-    "    Pair(\"Y\", \"Z\"),\n",
-    "    Pair(\"Z\", \"X\")\n",
+    "    Pair(\"X\", \"Y\", \"pool8\"),\n",
+    "    Pair(\"Y\", \"Z\", \"pool9\"),\n",
+    "    Pair(\"Z\", \"X\", \"pool10\"),\n",
     "]\n",
     "\n",
     "# Find paths from X to Z\n",
@@ -248,7 +368,7 @@
     "\n",
     "print(f\"\\nAll paths from X to Z in a cyclical graph:\")\n",
     "for i, path in enumerate(cycle_paths):\n",
-    "    print(f\"Path {i+1}: {' -> '.join(path)}\")"
+    "    print(f\"Path {i+1}: {' -> '.join(list(map(lambda x: x[2], path)))}\")"
    ]
   },
   {
