--- a/src/pool.ipynb
+++ b/src/pool.ipynb
@@ -116,9 +116,7 @@
     "    def from_tuple(cls, t: Tuple, tokens: Dict[str, Token]) -> Optional[\"LiquidityPoolForSwap\"]:\n",
     "        token0, token1, pool_type = normalize_address(t[2]), normalize_address(t[3]), t[1]\n",
     "        token0, token1 = tokens.get(token0), tokens.get(token1)\n",
-    "        if not token0 or not token1: \n",
-    "            print(f\">>>>>>>>>>. missing toekens {token0} {token1}\")\n",
-    "            return None\n",
+    "        if not token0 or not token1: return None\n",
     "        return LiquidityPoolForSwap(\n",
     "            lp=normalize_address(t[0]),\n",
     "            type=pool_type,\n",
