slow version of sync quote

--- a/src/chains.ipynb
+++ b/src/chains.ipynb
@@ -36,13 +36,15 @@
     "\n",
     "import asyncio, web3, os\n",
     "from dataclasses import dataclass\n",
-    "from functools import wraps, reduce\n",
+    "from functools import wraps, reduce, partial\n",
+    "import concurrent.futures\n",
+    "from concurrent.futures import ThreadPoolExecutor\n",
     "from typing import List, TypeVar, Callable, Optional, Tuple, Dict, Union\n",
     "from fastcore.utils import patch\n",
     "from web3 import Web3, HTTPProvider, AsyncWeb3, AsyncHTTPProvider, Account\n",
     "from web3.eth.async_eth import AsyncContract\n",
     "from web3.eth import Contract\n",
-    "from web3.manager import RequestManager\n",
+    "from web3.manager import RequestManager, RequestBatcher\n",
     "from sugar.config import ChainSettings, make_op_chain_settings, make_base_chain_settings\n",
     "from sugar.helpers import normalize_address, MAX_UINT256, float_to_uint256, apply_slippage, get_future_timestamp\n",
     "from sugar.abi import sugar, slipstream, price_oracle, router, quoter\n",
@@ -143,7 +145,33 @@
     "    \n",
     "    def prepare_pools_for_swap(self, pools: List[Tuple], tokens: List[Token]) -> List[LiquidityPoolForSwap]:\n",
     "        tokens = {t.token_address: t for t in tokens}\n",
-    "        return list(filter(lambda p: p is not None, map(lambda p: LiquidityPoolForSwap.from_tuple(p, tokens), pools)))"
+    "        return list(filter(lambda p: p is not None, map(lambda p: LiquidityPoolForSwap.from_tuple(p, tokens), pools)))\n",
+    "    \n",
+    "    def prepare_quote_batch(self, batcher: RequestBatcher, pools: List[List[LiquidityPoolForSwap]], amount_in: int, paths: List[List[Tuple]]):\n",
+    "        for i, path in enumerate(paths):\n",
+    "            #print(f\">>>>>>>>>> processing pools: {pools}\")\n",
+    "            rt = prepare_route([RouteInput(pool=p, reversed=p.token0.token_address != path[i][0]) for i, p in enumerate(pools[i])])\n",
+    "            #print(f\">>>>>>>>>> calling quoteExactInput with {amount_in} {rt.encoded}\")\n",
+    "            batcher.add(self.quoter.functions.quoteExactInput(rt.encoded, amount_in))\n",
+    "        return batcher\n",
+    "\n",
+    "    def prepare_quotes(self, from_token:Token, to_token:Token, amount_in: int, path_pools: List[List[LiquidityPoolForSwap]], responses):\n",
+    "        quotes = []\n",
+    "        for i, r in enumerate(responses):\n",
+    "            if isinstance(r, Exception): continue\n",
+    "            else: quotes.append(Quote(from_token=from_token, to_token=to_token, path=path_pools[i], amount_in=amount_in, amount_out=r[0]))\n",
+    "        return quotes\n",
+    "    \n",
+    "    def get_paths_for_quote(self, from_token: Token, to_token: Token, pools: List[LiquidityPoolForSwap], exclude_tokens: List[str]) -> List[List[Tuple]]:\n",
+    "        exclude_tokens_set = set(map(lambda t: normalize_address(t), exclude_tokens))\n",
+    "\n",
+    "        if from_token.token_address in exclude_tokens: exclude_tokens_set.remove(from_token.token_address)\n",
+    "        if to_token.token_address in exclude_tokens: exclude_tokens_set.remove(to_token.token_address)\n",
+    "\n",
+    "        pairs = [Pair(p.token0.token_address, p.token1.token_address, p.lp) for p in pools]\n",
+    "        paths = find_all_paths(pairs, from_token.wrapped_token_address or from_token.token_address, to_token.wrapped_token_address or to_token.token_address)\n",
+    "        # filter out paths with excluded tokens\n",
+    "        return list(filter(lambda p: len(set(map(lambda t: t[0], p)) & exclude_tokens_set) == 0, paths))"
    ]
   },
   {
@@ -234,44 +262,19 @@
     "    \n",
     "    @require_async_context\n",
     "    async def get_pools_for_swaps(self) -> List[LiquidityPoolForSwap]: return await self.get_pools(for_swaps=True)\n",
-    "    \n",
+    "\n",
     "    @require_async_context\n",
     "    async def _get_quotes_for_paths(self, from_token: Token, to_token: Token, amount_in: int, pools: List[LiquidityPoolForSwap], paths: List[List[Tuple]]) -> List[Optional[Quote]]:\n",
-    "        quotes, pools_dict = [], {p.lp: p for p in pools}\n",
+    "        pools_dict = {p.lp: p for p in pools}\n",
+    "        path_pools = [list(map(lambda p: pools_dict[p[2]], path)) for path in paths]\n",
     "        async with self.web3.batch_requests() as batch:\n",
-    "            path_pools = [list(map(lambda p: pools_dict[p[2]], path)) for path in paths]\n",
-    "            \n",
-    "            for i, path in enumerate(paths):\n",
-    "                rt = prepare_route([RouteInput(pool=p, reversed=p.token0.token_address != path[i][0]) for i,p in enumerate(path_pools[i])])\n",
-    "                batch.add(self.quoter.functions.quoteExactInput(rt.encoded, amount_in))\n",
-    "            \n",
-    "            responses = await batch.async_execute()\n",
-    "\n",
-    "            for i, r in enumerate(responses):\n",
-    "                if isinstance(r, Exception): continue\n",
-    "                else: quotes.append(Quote(from_token=from_token, to_token=to_token, path=path_pools[i], amount_in=amount_in, amount_out=r[0]))\n",
-    "        return quotes\n",
+    "            batch = self.prepare_quote_batch(batch, path_pools, amount_in, paths)\n",
+    "            return self.prepare_quotes(from_token, to_token, amount_in, path_pools, await batch.async_execute())\n",
     "\n",
     "    @require_async_context\n",
     "    async def get_quote(self, from_token: Token, to_token: Token, amount_in: int, exclude_tokens: List[str] = []) -> Optional[Quote]:\n",
-    "        [tokens, pools] = await asyncio.gather(*[self.get_all_tokens(listed_only=True), self.get_pools_for_swaps()])\n",
-    "        exclude_tokens_set = set(map(lambda t: normalize_address(t), exclude_tokens))\n",
-    "\n",
-    "        if from_token.token_address in exclude_tokens: exclude_tokens_set.remove(from_token.token_address)\n",
-    "        if to_token.token_address in exclude_tokens: exclude_tokens_set.remove(to_token.token_address)\n",
-    "\n",
-    "        quotes, pairs = [], [Pair(p.token0.token_address, p.token1.token_address, p.lp) for p in pools]\n",
-    "        paths = find_all_paths(pairs, from_token.wrapped_token_address or from_token.token_address, to_token.wrapped_token_address or to_token.token_address)\n",
-    "        # filter out paths with excluded tokens\n",
-    "        paths = list(filter(lambda p: len(set(map(lambda t: t[0], p)) & exclude_tokens_set) == 0, paths))\n",
-    "        filtered_paths = []\n",
-    "        for p in paths:\n",
-    "            tokens = []\n",
-    "            for ps in p:\n",
-    "                tokens.append(ps[0])\n",
-    "                tokens.append(ps[1])\n",
-    "            if len(set(tokens) & exclude_tokens_set) == 0: filtered_paths.append(p)\n",
-    "        \n",
+    "        pools = await self.get_pools_for_swaps()\n",
+    "        paths = self.get_paths_for_quote(from_token, to_token, pools, exclude_tokens)\n",
     "        quotes = sum(await asyncio.gather(*[self._get_quotes_for_paths(from_token, to_token, amount_in, pools, paths) for paths in chunk(paths, 500)]), [])\n",
     "        return max(quotes, key=lambda q: q.amount_out) if len(quotes) > 0 else None\n",
     "\n",
@@ -455,7 +458,50 @@
     "        return self.prepare_pools(pools, tokens, self.get_prices(tokens)) if not for_swaps else self.prepare_pools_for_swap(pools, tokens)\n",
     "    \n",
     "    @require_context\n",
-    "    def get_pools_for_swaps(self) -> List[LiquidityPoolForSwap]: return self.get_pools(for_swaps=True)"
+    "    def get_pools_for_swaps(self) -> List[LiquidityPoolForSwap]: return self.get_pools(for_swaps=True)\n",
+    "\n",
+    "    @require_context\n",
+    "    def _get_quotes_for_paths(self, from_token: Token, to_token: Token, amount_in: int, pools: List[LiquidityPoolForSwap], paths: List[List[Tuple]]) -> List[Optional[Quote]]:\n",
+    "        pools_dict = {p.lp: p for p in pools}\n",
+    "        path_pools = [list(map(lambda p: pools_dict[p[2]], path)) for path in paths]\n",
+    "        with self.web3.batch_requests() as batch:\n",
+    "            batch = self.prepare_quote_batch(batch, path_pools, amount_in, paths)\n",
+    "            return self.prepare_quotes(from_token, to_token, amount_in, path_pools, batch.execute())\n",
+    "\n",
+    "    @require_context\n",
+    "    def get_quote(self, from_token: Token, to_token: Token, amount_in: int, exclude_tokens: List[str] = []) -> Optional[Quote]:\n",
+    "        pools = self.get_pools_for_swaps()\n",
+    "        paths = self.get_paths_for_quote(from_token, to_token, pools, exclude_tokens)\n",
+    "        path_chunks = list(chunk(paths, 500))\n",
+    "        \n",
+    "        # Store self reference for thread context\n",
+    "        chain_instance = self\n",
+    "        \n",
+    "        def get_quotes_for_chunk(paths_chunk):\n",
+    "            \"\"\"Thread-safe function to get quotes for a chunk of paths\"\"\"\n",
+    "            return chain_instance._get_quotes_for_paths(from_token, to_token, amount_in, pools, paths_chunk)\n",
+    "        \n",
+    "        # Collect all quotes from all threads\n",
+    "        all_quotes = []\n",
+    "        # with ThreadPoolExecutor() as executor:\n",
+    "        #     futures = [executor.submit(get_quotes_for_chunk, pc) for pc in path_chunks]\n",
+    "        #     for future in concurrent.futures.as_completed(futures):\n",
+    "        #         try:\n",
+    "        #             quotes_batch = future.result()\n",
+    "        #             all_quotes.extend(quotes_batch)\n",
+    "        #         except Exception as e:\n",
+    "        #             print(f\"Error getting quotes: {e}\")\n",
+    "        \n",
+    "        # # Return best quote\n",
+    "        # return max(all_quotes, key=lambda q: q.amount_out) if len(all_quotes) > 0 else None\n",
+    "\n",
+    "        for pc in path_chunks:\n",
+    "            quotes = get_quotes_for_chunk(pc)\n",
+    "            for q in quotes: all_quotes.append(q)\n",
+    "            # print(f\">>>>>>> {}\")\n",
+    "\n",
+    "        return max(all_quotes, key=lambda q: q.amount_out) if len(all_quotes) > 0 else None\n",
+    "        "
    ]
   },
   {
@@ -482,6 +528,33 @@
     "\n",
     "class OPChain(Chain, OPChainCommon):\n",
     "    def __init__(self, **kwargs): super().__init__(make_op_chain_settings(**kwargs))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100000000000000000000 -> 3.783388\n",
+      "CL50-VELO/opxVELO - CL200-USDC/opxVELO\n"
+     ]
+    }
+   ],
+   "source": [
+    "with OPChain() as op:\n",
+    "    tokens = op.get_all_tokens(listed_only=True)\n",
+    "    def get_token_by_addres(addr): return next(filter(lambda t: t.token_address == addr, tokens), None)\n",
+    "    from_token_addr, to_token_addr = normalize_address(\"0x9560e827af36c94d2ac33a39bce1fe78631088db\"), normalize_address(\"0x0b2c639c533813f4aa9d7837caf62653d097ff85\") \n",
+    "    from_token, to_token, amount_in = get_token_by_addres(from_token_addr), get_token_by_addres(to_token_addr), float_to_uint256(100)\n",
+    "    exclude_tokens = [\"0x74ccbe53f77b08632ce0cb91d3a545bf6b8e0979\", \"0x139283255069ea5deef6170699aaef7139526f1f\", \"0x88a89866439f4c2830986b79cbe6f69d1bd548bb\", \"0x8901cb2e82cc95c01e42206f8d1f417fe53e7af0\"]\n",
+    "    q = op.get_quote(from_token, to_token, amount_in, exclude_tokens)\n",
+    "    if q:\n",
+    "        print(f\"{q.amount_in} -> {q.amount_out / 10 ** to_token.decimals}\")\n",
+    "        print(' - '.join(map(lambda p: p.symbol, q.path)))"
    ]
   },
   {
@@ -571,7 +644,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m     sock\u001b[38;5;241m.\u001b[39msettimeout(\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m      8\u001b[0m     result \u001b[38;5;241m=\u001b[39m sock\u001b[38;5;241m.\u001b[39mconnect_ex((host, port))\n\u001b[0;32m----> 9\u001b[0m     \u001b[43mtest_eq\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m socket\u001b[38;5;241m.\u001b[39merror \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m     11\u001b[0m     test_eq(err, \u001b[38;5;28;01mNone\u001b[39;00m)\n",
+      "Cell \u001b[0;32mIn[12], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m     sock\u001b[38;5;241m.\u001b[39msettimeout(\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m      8\u001b[0m     result \u001b[38;5;241m=\u001b[39m sock\u001b[38;5;241m.\u001b[39mconnect_ex((host, port))\n\u001b[0;32m----> 9\u001b[0m     \u001b[43mtest_eq\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m socket\u001b[38;5;241m.\u001b[39merror \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m     11\u001b[0m     test_eq(err, \u001b[38;5;28;01mNone\u001b[39;00m)\n",
       "File \u001b[0;32m~/projects/sugar-sdk/env/lib/python3.10/site-packages/fastcore/test.py:39\u001b[0m, in \u001b[0;36mtest_eq\u001b[0;34m(a, b)\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mtest_eq\u001b[39m(a,b):\n\u001b[1;32m     38\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`test` that `a==b`\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 39\u001b[0m     \u001b[43mtest\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43mequals\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m==\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/projects/sugar-sdk/env/lib/python3.10/site-packages/fastcore/test.py:29\u001b[0m, in \u001b[0;36mtest\u001b[0;34m(a, b, cmp, cname)\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`assert` that `cmp(a,b)`; display inputs and `cname or cmp.__name__` if it fails\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m cname \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m: cname\u001b[38;5;241m=\u001b[39mcmp\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\n\u001b[0;32m---> 29\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m cmp(a,b),\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00ma\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mb\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n",
       "\u001b[0;31mAssertionError\u001b[0m: ==:\n61\n0"
@@ -688,7 +761,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100000000000000000000 -> 5.422546\n",
+      "100000000000000000000 -> 3.751304\n",
       "vAMM-USDC/VELO\n"
      ]
     }
