--- a/src/quote.ipynb
+++ b/src/quote.ipynb
@@ -51,7 +51,15 @@
     "#| export \n",
     "\n",
     "@dataclass\n",
-    "class Quote: from_token: Token; to_token: Token; path: List[LiquidityPoolForSwap]; amount_in: int; amount_out: int\n",
+    "class Quote:\n",
+    "    from_token: Token; to_token: Token; path: List[LiquidityPoolForSwap]; amount_in: int; amount_out: int\n",
+    "\n",
+    "    def to_tuple(self) -> tuple: return (self.from_token, self.to_token, tuple(self.path), self.amount_in, self.amount_out)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def from_tuple(t: tuple) -> \"Quote\":\n",
+    "        from_token, to_token, path, amount_in, amount_out = t\n",
+    "        return Quote(from_token=from_token, to_token=to_token, path=list(path), amount_in=amount_in, amount_out=amount_out)\n",
     "\n",
     "# magic numbers\n",
     "QUOTER_STABLE_POOL_FILLER, QUOTER_VOLATILE_POOL_FILLER = 2097152, 4194304\n",
