get started on swap functionality - WIP

--- a/src/chains.ipynb
+++ b/src/chains.ipynb
@@ -149,9 +149,7 @@
     "    \n",
     "    def prepare_quote_batch(self, batcher: RequestBatcher, pools: List[List[LiquidityPoolForSwap]], amount_in: int, paths: List[List[Tuple]]):\n",
     "        for i, path in enumerate(paths):\n",
-    "            #print(f\">>>>>>>>>> processing pools: {pools}\")\n",
     "            rt = prepare_route([RouteInput(pool=p, reversed=p.token0.token_address != path[i][0]) for i, p in enumerate(pools[i])])\n",
-    "            #print(f\">>>>>>>>>> calling quoteExactInput with {amount_in} {rt.encoded}\")\n",
     "            batcher.add(self.quoter.functions.quoteExactInput(rt.encoded, amount_in))\n",
     "        return batcher\n",
     "\n",
@@ -539,8 +537,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100000000000000000000 -> 3.783388\n",
-      "CL50-VELO/opxVELO - CL200-USDC/opxVELO\n"
+      "100000000000000000000 -> 3.86114\n",
+      "CL200-WETH/VELO - CL100-WETH/USD+ - CL1-USDC/USD+\n"
      ]
     }
    ],
